--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@stitches/react": "^1.2.8",
+    "axios": "^1.2.6",
     "keen-slider": "^6.8.5",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^11.5.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
